# desigualdad_educativa

./: LICENSE  Makefile  README.md  main.py  muestra_inegi.csv  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.html  index.rst  make.bat
notebooks/: 1_transformacion_datos_inegi.ipynb  2_transformacion_datos_SEP.ipynb  Descarga_Datos_INEGI.ipynb  Descarga_Datos_SEP.ipynb  Descarga_datos.ipynb  EDA_DB_cruzadas.ipynb  EDA_INEGI_SEP_cruzadas.ipynb  EDA_Inegi.html  EDA_Inegi.ipynb  EDA_catalogo_escuela_sonora.ipynb  EDA_sep1.html  EDA_sep1.ipynb  Pruebas INEGI.ipynb  muestra_catalogo_escuelas.csv  muestra_sep_datos_tidy.csv
notebooks/data/processed/: catalogo_escuelas_sonora_limpio.csv  inegi_contexto_municipal.csv
notebooks/javier_desigualdad_educativa/: main.py  pyproject.toml
references/: diccionario_datos_formato_911.csv  diccionario_inegi_contexto.json  diccionario_inegi_municipio.json  diccionario_inegi_nacional.json  diccionario_municipios_sonora.json
reports/: Reporte_EDA.md
reports/tables/: bottom10_grado_promedio.csv  correlaciones_clave.csv  participacion_publico_privado_por_nivel.csv  ratio_publico_privado_municipio_nivel.csv  top10_egreso_por100.csv  top10_presion_global.csv  top10_presion_preescolar.csv  top10_presion_primaria.csv  top10_presion_secundaria.csv
site/: index.html
src/data/: make_dataset.py
